--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     "cSpell.enableFiletypes": [
         "astro"
-    ]
+    ],
+    "eslint.validate": [
+      "javascript",
+      "javascriptreact",
+      "astro", // Enable .astro
+      "typescript", // Enable .ts
+      "typescriptreact" // Enable .tsx
+    ],
+      "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true,
+      }
 }
