--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "@astrojs/tailwind": "^5.0.0",
     "astro": "3.1.4",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/parser": "^6.7.3",
+    "eslint": "^8.50.0",
+    "eslint-plugin-astro": "^0.29.1"
   }
 }
