--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "my-portfolio",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/tailwind": "^5.0.0",
-    "astro": "3.1.4",
-    "tailwindcss": "^3.3.3"
-  },
-  "devDependencies": {
-    "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^8.50.0",
-    "eslint-plugin-astro": "^0.29.1"
-  }
+	"name": "my-portfolio",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro",
+		"i18n:install": "astro-i18n install",
+		"i18n:sync": "astro-i18n sync",
+		"i18n:extract:keys": "astro-i18n extract:keys"
+	},
+	"dependencies": {
+		"@astrojs/tailwind": "5.0.0",
+		"astro": "3.1.4",
+		"astro-i18next": "1.0.0-beta.21"
+	},
+	"devDependencies": {
+		"@typescript-eslint/parser": "^6.7.3",
+		"eslint": "^8.50.0",
+		"eslint-plugin-astro": "^0.29.1"
+	}
 }
