--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
 		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
-		"i18n:install": "astro-i18n install",
-		"i18n:sync": "astro-i18n sync",
-		"i18n:extract:keys": "astro-i18n extract:keys"
+		"translate": "npx astro-i18next generate"
 	},
 	"dependencies": {
 		"@astrojs/tailwind": "5.0.0",
